1) Fix Portfolio/Watchlist table resizing incorrectly due to overflowing table-header sections.
2) Register handlebars helper ifeq.

3) Enable handling of post requests from the Portfolio dropdownlist.
Refresh Portfolio table on selection change.

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -204,6 +204,7 @@ th, td {
 	padding: 1px 5px 1px 5px;
 	color: #333333;
 	height: 33px;
+	overflow: auto;
 }
 
 .table-header form {
